# SFML_Space-Shooter-Game-Demo

./: CMakeLists.txt  README.md
include/: Aircraft.hpp  Application.hpp  Category.hpp  Command.hpp  CommandQueue.hpp  Entity.hpp  Game.hpp  GameState.hpp  LoadingState.hpp  MenuState.hpp  ParallelTask.hpp  PauseState.hpp  Player.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.hpp  SceneNode.hpp  SpriteNode.hpp  State.hpp  StateIdentifiers.hpp  StateStack.hpp  StringHelpers.hpp  StringHelpers.inl  TitleState.hpp  Utility.hpp  World.hpp
src/: Aircraft.cpp  Application.cpp  Command.cpp  CommandQueue.cpp  Entity.cpp  Game.cpp  GameState.cpp  LoadingState.cpp  MenuState.cpp  ParallelTask.cpp  PauseState.cpp  Player.cpp  SceneNode.cpp  SpriteNode.cpp  State.cpp  StateStack.cpp  TitleState.cpp  Utility.cpp  World.cpp  main.cpp
